[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Paddle.png" type="Texture" id=1]
[ext_resource path="res://Opponent.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 60 )

[node name="Opponent" type="KinematicBody2D" groups=["OppGroup"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 1 )

[node name="countdownTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="countdownTimer1" type="Timer" parent="."]
wait_time = 5.0

[node name="countdownTimer2" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="countdownTimer" to="." method="_on_countdownTimer_timeout"]
[connection signal="timeout" from="countdownTimer1" to="." method="_on_countdownTimer1_timeout"]
[connection signal="timeout" from="countdownTimer2" to="." method="_on_countdownTimer2_timeout"]
